--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/temanyoga?schema=public"
+DIRECT_URL="postgresql://postgres:postgres@localhost:5432/temanyoga?schema=public"
 
 # Auth.js
 AUTH_SECRET="generate-with-openssl-rand-base64-32"
@@ -10,3 +11,10 @@ R2_ACCESS_KEY_ID=""
 R2_SECRET_ACCESS_KEY=""
 R2_BUCKET_NAME="temanyoga"
 R2_PUBLIC_URL=""
+
+# Upstash Redis (rate limiting)
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
+
+# Seed (required in production, optional in development)
+ADMIN_SEED_PASSWORD=""
