--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@aws-sdk/s3-request-presigner": "^3.990.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.2",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
