feat: Enhance product detail page with SEO metadata and structured data
- Added Open Graph and Twitter metadata for better social sharing.
- Implemented JSON-LD structured data for product details.
- Updated metadata generation to include canonical URLs.

feat: Integrate WhatsApp notifications for order status updates

- Added functionality to send WhatsApp notifications to customers on order status changes.
- Implemented sending notifications for payment proof approvals and rejections.
- Created templates for WhatsApp messages to improve communication.

feat: Introduce admin settings for WhatsApp configuration

- Created API endpoints for managing site settings, including WhatsApp configurations.
- Added UI components for enabling/disabling WhatsApp notifications and setting admin phone numbers.
- Implemented test message functionality to verify WhatsApp integration.

feat: Implement sitemap and robots.txt for SEO optimization

- Generated dynamic sitemap for active products and static pages.
- Added robots.txt to control search engine indexing.

feat: Create Open Graph image for social sharing

- Developed a dynamic Open Graph image generator for better visual representation on social media.

chore: Clean up admin sidebar and remove unnecessary links

- Removed the home link from the admin sidebar for a cleaner navigation experience.

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,8 @@ R2_PUBLIC_URL=""
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
 
+# WhatsApp (Fonnte)
+FONNTE_TOKEN=""
+
 # Seed (required in production, optional in development)
 ADMIN_SEED_PASSWORD=""
