feat: add email notification feature using Resend
- Added `resend` package to handle email notifications.
- Implemented email settings management in the admin panel.
- Created email templates for various order statuses (created, payment received, approved, rejected, shipped, completed, cancelled).
- Integrated email notifications in order and payment proof APIs.
- Updated WhatsApp settings to reflect the new site URL.
- Enhanced login page with improved UI and password visibility toggle.
- Added email integration section in admin settings.
- Updated validation schema to include email settings.

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,8 @@ UPSTASH_REDIS_REST_TOKEN=""
 # WhatsApp (Fonnte)
 FONNTE_TOKEN=""
 
+# Resend (Email)
+RESEND_API_KEY=""
+
 # Seed (required in production, optional in development)
 ADMIN_SEED_PASSWORD=""
