--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "resend": "^6.9.2",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.1",
     "zod": "^4.3.6"
