--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.71.1",
     "resend": "^6.9.2",
     "slugify": "^1.6.6",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.4.1",
     "zod": "^4.3.6"
   },
